# generator-rebus

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  GEMINI.md  GENERATOR_ARCH.md  IMPROVEMENTS.md  ITERATION_LOG.md  ITERATION_LOG_ARCHIVE.md  LESSONS_LEARNED.md  Makefile  README.md  ROADMAP.md  SECURITY.md  SETUP_AI_AGENT_CONFIG.md  archive_logs.py  batch_redefine.sh  fix_diagnostics.py  implementation_plan.md  patch.js  patch_generate_define.py  patch_ruff.py  patch_run_all.py  patch_run_all_2.py  patch_run_all_3.py  patch_run_all_4.py  patch_script.py  pre_commit.sh  prompt_research.md  pyproject.toml  run_all.sh  run_batch_loop.sh  run_clue_canon_backfill.sh  run_clue_canon_simplify.sh  run_definition_improve.sh  run_puzzle_definition_audit.sh  run_title_improve.sh  schema.sql  sitecustomize.py  (+2 more)
.Jules/: palette.md
.jules/: bolt.md  sentinel.md
crossword_engine/: Cargo.toml
db/: delete_unreferenced_canonicals.sql  schema.sql
engines/crossword-engine/: Cargo.toml
engines/crossword-engine/src/: dictionary_profile.rs  lib.rs
engines/crossword-engine/src/generation/: candidate.rs  mod.rs  output.rs  pipeline.rs  settings.rs
engines/crossword-engine/src/model/: mod.rs  words.rs
engines/crossword-engine/src/quality/: mod.rs  scoring.rs
engines/crossword-engine/src/solver/: backtracking.rs  bitset.rs  mod.rs  word_index.rs
engines/crossword-engine/src/template/: incremental.rs  mod.rs  procedural.rs  validate.rs
engines/crossword-engine/tests/: cli.rs
frontend/: index.html  jest.config.json  package-lock.json  package.json  tsconfig.json  (+1 more)
(+320 files in other folders)
