[project]
name = "rebus-generator"
version = "0.1.0"
description = "Romanian rebus (crossword) generator pipeline"
readme = "README.md"
authors = [
    { name = "Fabian" }
]
requires-python = ">=3.11"
dependencies = [
    "supabase>=2.0.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["packages/rebus-generator/src/rebus_generator"]
artifacts = ["packages/rebus-generator/src/rebus_generator/domain/short_word_clues.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["packages/rebus-generator/src"]
