[package]
name = "crossword_engine"
version = "0.1.0"
edition = "2024"

[lib]
name = "crossword_engine"
path = "src/lib.rs"

[[bin]]
name = "crossword_phase1"
path = "src/bin/crossword_phase1.rs"

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
rand = "0.9.3"
rayon = "1.10.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[dev-dependencies]
tempfile = "3.20.0"
